# FlowDay

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 52949402356c_add_all_tables.py  a3f8c2e91b47_add_abandoned_to_execution_logs.py  dc42c5a64ef7_initial.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  audit_log.py  base.py  execution_log.py  scheduled_block.py  task.py  user_config.py  work_session.py
backend/app/repositories/: audit_repository.py  config_repository.py  log_repository.py  schedule_repository.py  stats_repository.py  task_repository.py
backend/app/routers/: config.py  logs.py  schedule.py  stats.py  tasks.py
backend/app/schemas/: config.py  log.py  schedule.py  stats.py  task.py
backend/app/services/: config_service.py  log_service.py  scheduler_service.py  stats_service.py  task_service.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_logs.py  test_scheduler.py  test_tasks.py
docs/: CLAUDE.md  CONTEXT.md  RAW_IDEIA.md  TODO.md
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  config.ts  logs.ts  schedule.ts  stats.ts  tasks.ts  types.ts
frontend/src/routes/: Dashboard.tsx  History.tsx  Settings.tsx  Tasks.tsx
(+17 files in other folders)
